# leptos-pokedeck

./: Cargo.toml  README.md  index.html  style.css
.github/workflows/: gh-pages-deploy.yml
src/: app.rs  main.rs  pokemon.rs  theme.rs
src/components/: mod.rs  pokemon_card.rs
