[package]
name = "leptos-pokedeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.1", features = ["csr"] }
gloo-net = { version = "0.4", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }

